force-app/main/default/objects/SalesActivityGoal__c/SalesActivityGoal__c.object-meta.xml
<CustomObject>
    <label>Sales Activity Goal</label>
    <nameField>
        <displayFormat>SG-{00000}</displayFormat>
        <label>Sales Activity Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Activity Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>