force-app/main/default/objects/SalesActivityGoal__c/fields/ClientOfficeVisit__c.field-meta.xml
<CustomField>
    <fullName>ClientOfficeVisit__c</fullName>
    <label>Client Office Visit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>