force-app/main/default/objects/SalesActivityGoal__c/fields/EndUserVisit__c.field-meta.xml
<CustomField>
    <fullName>EndUserVisit__c</fullName>
    <label>End User Visit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>