force-app/main/default/objects/SalesActivityGoal__c/fields/Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Entertainment__c</fullName>
    <label>Entertainment (Golf, Games, Etc.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>