force-app/main/default/objects/SalesActivityGoal__c/fields/FactoryVisitLocal__c.field-meta.xml
<CustomField>
    <fullName>FactoryVisitLocal__c</fullName>
    <label>Factory Visit (Local)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>