force-app/main/default/objects/SalesActivityGoal__c/fields/FactoryVisitTravel__c.field-meta.xml
<CustomField>
    <fullName>FactoryVisitTravel__c</fullName>
    <label>Factory Visit (Travel)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>