force-app/main/default/objects/SalesActivityGoal__c/fields/HappyHour__c.field-meta.xml
<CustomField>
    <fullName>HappyHour__c</fullName>
    <label>Happy Hour - Cocktails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>