force-app/main/default/objects/SalesActivityGoal__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <label>Meal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>