force-app/main/default/objects/SalesActivityGoal__c/fields/SiteVisit__c.field-meta.xml
<CustomField>
    <fullName>SiteVisit__c</fullName>
    <label>Site Visit (Project Related)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>