force-app/main/default/objects/SalesActivityGoal__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>ClientOfficeVisit__c + EndUserVisit__c + Entertainment__c + FactoryVisitLocal__c + FactoryVisitTravel__c + HappyHour__c + Meal__c + SiteVisit__c + Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>