force-app/main/default/objects/SalesActivityGoal__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training (L-N-N, Seminar)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>