force-app/main/default/objects/SalesActivityGoal__c/validationRules/Sales_Rep_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Rep_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(SalesRep__c)), NOT(ISPICKVAL(Master_Report__c, &quot;&quot;)))</errorConditionFormula>
    <errorMessage>You cannot enter both values for the Master and Sales Rep fields. For User Select Sales Rep &amp; For Office Location Select Master.</errorMessage>
</ValidationRule>